clientVerseGit/force-app/main/default/objects/List__c/List__c.object-meta.xml
<CustomObject>
    <description>List of contacts, accounts, lists, or campaigns for targeting, segmentation, and event and campaign management.</description>
    <label>List</label>
    <nameField>
        <label>List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>