clientVerseGit/force-app/main/default/objects/List__c/fields/Last_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Date__c</fullName>
    <description>The last date this list received an email from the marketing automation platform.</description>
    <label>Last Touch Date</label>
    <type>Date</type>
</CustomField>