clientVerseGit/force-app/main/default/objects/List__c/fields/List_Member_Mapping__c.field-meta.xml
<CustomField>
    <fullName>List_Member_Mapping__c</fullName>
    <label>List Member Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>