clientVerseGit/force-app/main/default/objects/List__c/fields/List_Query_String__c.field-meta.xml
<CustomField>
    <fullName>List_Query_String__c</fullName>
    <description>SOQL query to define List Members</description>
    <label>List Query String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>