clientVerseGit/force-app/main/default/objects/List__c/fields/List_Status__c.field-meta.xml
<CustomField>
    <fullName>List_Status__c</fullName>
    <label>List Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>