clientVerseGit/force-app/main/default/objects/List__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <label>Member Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>