clientVerseGit/force-app/main/default/objects/List__c/fields/Primary_Tag__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Tag</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Lists</relationshipLabel>
    <relationshipName>Lists</relationshipName>
    <type>Lookup</type>
</CustomField>