clientVerseGit/force-app/main/default/objects/List__c/recordTypes/Firm_List.recordType-meta.xml
<RecordType>
    <fullName>Firm_List</fullName>
    <active>true</active>
    <description>Enterprise-wide lists managed by Marketing/BD for firm initiatives, practice groups, and industry teams.</description>
    <label>Firm List</label>
</RecordType>