clientVerseGit/force-app/main/default/objects/List__c/recordTypes/Personal_List.recordType-meta.xml
<RecordType>
    <fullName>Personal_List</fullName>
    <active>true</active>
    <description>Private contact lists owned by individual lawyers or BD professionals. Represents personal networks and relationships. Shareable at owner&apos;s discretion.</description>
    <label>Personal List</label>
</RecordType>