clientVerseGit/force-app/main/default/objects/List__c/recordTypes/Working_List.recordType-meta.xml
<RecordType>
    <fullName>Working_List</fullName>
    <active>true</active>
    <description>Temporary lists for short-term projects, pitches, or research. Created by BD professionals or lawyers for immediate needs. Can be converted to Firm or Campaign lists or archived after use.</description>
    <label>Working List</label>
</RecordType>