clientVerseGit/force-app/main/default/objects/List__c/listViews/Mailing_Lists.listView-meta.xml
<ListView>
    <fullName>Mailing_Lists</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Primary_Tag__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mailing Lists</label>
</ListView>