clientVerseGit/force-app/main/default/objects/List__c/listViews/My_Lists.listView-meta.xml
<ListView>
    <fullName>My_Lists</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My Lists</label>
</ListView>